--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/twig-pack": "^1.0",
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
